--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<script type="text/javascript" src="https://okyk738.github.io/ytsubstool/jquery-3.1.1.min.js"></script>
+	<script type="text/javascript" src="https://okyk738.github.io/ytsubstool/jquery-3.1.1.min.jsa"></script>
                 <link rel="stylesheet" href="odometer3.2-theme-default.css" />
                          <script type="text/javascript" src="od2.js"></script>
                      
